# cmake-conan-template

./: .clang-format  .clang-tidy  .cmake-format.py  .codespellrc  .gitignore  BUILDING.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  conanfile.py  dependencies.cmake  options.cmake  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
.github/scirpts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: ccache.cmake  clang-tidy.cmake  cmake-format-script.cmake  cmake-format-targets.cmake  cmake-format.cmake  common_options.cmake  coverage.cmake  cpm.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  format_cmake_files.cmake  install-config.cmake  install-config.cmake.in  install-rules.cmake  ipo.cmake  linker.cmake  lint-targets.cmake  lint.cmake  memory.cmake  module-registry.cmake  prelude.cmake  project-options.cmake  sanitizers.cmake  spell-targets.cmake  spell.cmake  static-analyzers-targets.cmake  static-analyzers.cmake  static_analyzers.cmake  variables.cmake  vsenvironment.cmake
conan_test/: CMakeLists.txt  conanfile.py
conan_test/src/: conan_package_test.cpp
core/: CMakeLists.txt
core/cmake/: install-config.cmake.in  install-rules.cmake  options.cmake
core/example/: CMakeLists.txt  core_example.cpp  empty_example.cpp
core/include/my_project/: core.hpp  my_project.hpp  static_string.hpp
core/include/my_project/core/: core.hpp
core/src/: my_project.cpp
core/test/: CMakeLists.txt
core/test/source/: my_project_test.cpp
core/test/src/: core_test.cpp
example/: CMakeLists.txt
fetch_content_test/: CMakeLists.txt
fetch_content_test/src/: fetch_content_test.cpp
include/ex/: ex.hpp
include/my_project/: my_project.hpp  static_string.hpp
src/: ex.cpp  my_project.cpp
test/: CMakeLists.txt
test/source/: ex_test.cpp  my_project_test.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: conan_package_test.cpp  example.cpp
test_package_fc/: CMakeLists.txt
test_package_fc/src/: fc_test.cpp
utility/: CMakeLists.txt
utility/cmake/: dependencies.cmake  install-config.cmake.in  install-rules.cmake  options.cmake
utility/example/: CMakeLists.txt  utility_example.cpp
utility/include/my_project/utility/: static_string.hpp
utility/test/: CMakeLists.txt
utility/test/source/: utility_test.cpp
utility/test/src/: utility_test.cpp
